[project]
name = "paytrace-orchestrator"
version = "0.1.0"
description = "PayTrace saga orchestration service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "environs>=14.1.1",
  "pika>=1.3.2",
  "python-dotenv>=1.1.1",
  "psycopg2-binary>=2.9.10",
  "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
